--- a/index.css
+++ b/index.css
@@ -16,8 +16,8 @@ body {
   position: relative;
   z-index: 2;
   margin: auto;
-  max-width: 1440px;
-  height: 800px;
+  max-width: 100%;
+  height: 100%;
   background-size: cover;
   display: flex;
   justify-content: center;
