--- a/index.css
+++ b/index.css
@@ -169,7 +169,7 @@ body {
   margin-top: 60px;
   display: flex;
   gap: 40px;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   flex-wrap: wrap;
 }
 
@@ -235,10 +235,9 @@ body {
   margin-top: 40px;
 }
 
-.map-img_minsk {
-  width: 380px;
-  height: 400px;
-  border-radius: 8px;
+.map {
+  width: 250px;
+  height: 300px;
 }
 
 .latitude-langitude__wrap {
