--- a/index.css
+++ b/index.css
@@ -1,23 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html,
 body {
-  font-family: Arial, sans-serif;
+  height: 100%;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .gradient {
   position: relative;
   z-index: 1;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
 .section {
   position: relative;
   z-index: 2;
   margin: auto;
-  max-width: 100%;
-  height: 100%;
+  width: 100vw;
+  /* max-width: 1260px; */
+  min-height: 100vh;
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -39,8 +49,10 @@ body {
 .container {
   position: relative;
   z-index: 2;
-  width: 1260px;
-  height: 665px;
+  /* width: 1260px; */
+  width: 100%;
+  /* height: 665px; */
+  height: 100%;
   padding: 0 30px;
 }
 
@@ -52,6 +64,7 @@ body {
   height: 44px;
   display: flex;
   flex-wrap: wrap;
+  max-width: 1260px;
 }
 
 .refresh-button {
@@ -169,7 +182,7 @@ body {
   margin-top: 60px;
   display: flex;
   gap: 40px;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
@@ -182,11 +195,16 @@ body {
   font-size: 24px;
   color: white;
   display: flex;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
 }
 
 .place {
   color: white;
-  font-size: 44px;
+  font-size: 40px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .time {
@@ -201,19 +219,28 @@ body {
 .content-info_weather__temperature {
   font-size: 70px;
   color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .content-info_weather__characteristics {
   margin-left: 25px;
   color: white;
   font-size: 22px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .weather__forecast {
   display: flex;
   gap: 50px;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 80px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .weather__forecast-day-wrap {
@@ -236,13 +263,15 @@ body {
 }
 
 .map {
-  width: 250px;
+  width: 350px;
   height: 300px;
+  margin-top: 10px;
 }
 
 .latitude-langitude__wrap {
   color: white;
   text-align: end;
+  margin-top: 10px;
 }
 
 @media (max-width: 768px) {
