--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 
 * {
   margin: 0;
@@ -289,6 +290,10 @@ body {
   color: white;
   text-align: end;
   margin-top: 10px;
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
 }
 
 @media (max-width: 768px) {
