--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
   max-width: 1280px;
   height: 100%;
   padding: 0 15px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .navigation-panel {
@@ -173,7 +173,7 @@ body {
 .content {
   margin-top: 60px;
   display: flex;
-  gap: 40px;
+  gap: 70px;
   justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -189,6 +189,7 @@ body {
   display: flex;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
+  white-space: nowrap;
 }
 
 .place {
@@ -207,7 +208,9 @@ body {
   display: flex;
   margin-top: 60px;
 }
-
+.content-info_place__date {
+  width: 50%;
+}
 #current-img {
   width: 160px;
   height: 100px;
@@ -237,12 +240,12 @@ body {
 }
 
 .content-info_weather__characteristics {
-  margin-left: 25px;
   color: white;
   font-size: 22px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-style: normal;
+  white-space: nowrap;
 }
 
 .weather__forecast {
