Rename img Refresh__BG2

--- a/index.css
+++ b/index.css
@@ -65,7 +65,7 @@ body {
   height: 44px;
   background-color: rgba(174, 181, 185, 0.2);
   border-radius: 6px;
-  background-image: url("./img/Refresh\ BG2.png");
+  background-image: url("./img/Refresh__BG2.png");
   background-size: 35%;
   background-repeat: no-repeat;
   background-position: center;
