--- a/index.css
+++ b/index.css
@@ -47,11 +47,11 @@ body {
   margin: 0;
 }
 
-.navigation-panel {
+.header {
   height: 44px;
 }
 
-.button-panel {
+.header__controls {
   height: 44px;
   display: flex;
   flex-wrap: wrap;
@@ -69,14 +69,14 @@ body {
   background-position: center;
 }
 
-.lang-box {
+.language-select {
   width: 70px;
   height: 44px;
   margin-left: 10px;
   margin-right: 10px;
 }
 
-.lang-en {
+.language-select__button {
   width: 71px;
   height: 44px;
   background-color: rgba(174, 181, 185, 0.2);
@@ -92,23 +92,23 @@ body {
   font-weight: bold;
 }
 
-.temperature-box {
+.temperature-switcher {
   width: 88px;
   height: 44px;
   display: flex;
   border-radius: 6px;
 }
 
-.temperature-box button {
+.temperature-switcher button {
   background-color: rgba(76, 82, 85, 0.4);
   color: white;
 }
 
-.temperature-box button.active {
+.temperature-switcher button.active {
   background-color: rgba(174, 181, 185, 1);
 }
 
-.fahrenheit {
+.temperature-switcher__button_fahrenheit {
   width: 44px;
   height: 44px;
   background-color: rgba(76, 82, 85, 0.4);
@@ -119,7 +119,7 @@ body {
   font-weight: bold;
 }
 
-.celsius {
+.temperature-switcher__button_celsius {
   width: 44px;
   height: 44px;
   background-color: rgba(174, 181, 185, 0.7);
@@ -130,7 +130,7 @@ body {
   font-weight: bold;
 }
 
-.search-panel {
+.search-block {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -139,7 +139,7 @@ body {
   margin-left: auto;
 }
 
-.search-input {
+.search-block__input {
   width: 260px;
   height: 44px;
   padding: 0 10px;
@@ -149,11 +149,11 @@ body {
   color: white;
 }
 
-.search-input::placeholder {
+.search-block__input::placeholder {
   color: white;
 }
 
-.search-button {
+.search-block__button {
   width: 90px;
   height: 44px;
   background-color: rgba(174, 181, 185, 0.4);
@@ -164,11 +164,11 @@ body {
   cursor: pointer;
 }
 
-.search-button:focus {
+.search-block__button:focus {
   outline: none;
 }
 
-.content {
+.main {
   margin-top: 60px;
   display: flex;
   gap: 50px;
@@ -176,7 +176,7 @@ body {
   flex-wrap: wrap;
 }
 
-.date-time {
+.forecast-block__date {
   font-size: 24px;
   color: white;
   display: flex;
@@ -185,7 +185,7 @@ body {
   white-space: nowrap;
 }
 
-.place {
+.forecast-block__position {
   color: white;
   font-size: 40px;
   font-family: "Montserrat", sans-serif;
@@ -193,16 +193,16 @@ body {
   font-style: normal;
 }
 
-.time {
+.forecast-block__time {
   margin-left: 20px;
 }
 
-.content-info_weather {
+.weather-today {
   display: flex;
   margin-top: 60px;
 }
 
-.current-img {
+.weather-today__image {
   width: 160px;
   height: 100px;
   mix-blend-mode: multiply;
@@ -222,7 +222,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.content-info_weather__temperature {
+.weather-today__main-temperature {
   font-size: 70px;
   color: white;
   font-family: "Montserrat", sans-serif;
@@ -230,7 +230,7 @@ body {
   font-style: normal;
 }
 
-.content-info_weather__characteristics {
+.weather-today__details {
   color: white;
   font-size: 22px;
   font-family: "Montserrat", sans-serif;
@@ -239,7 +239,7 @@ body {
   white-space: nowrap;
 }
 
-.weather__forecast {
+.weather-future {
   display: flex;
   gap: 50px;
   justify-content: space-between;
@@ -249,27 +249,27 @@ body {
   font-style: normal;
 }
 
-.weather__forecast-day-wrap {
+.weather-future__day-wrap {
   display: flex;
   gap: 10px;
 }
 
-.weather__forecast-day-name {
+.weather-future__day-name {
   color: white;
   font-size: 22px;
 }
 
-.weather__forecast-temp {
+.weather-future__day-temperature {
   font-size: 40px;
   color: white;
 }
 
-.content-map {
+.map-block {
   text-align: center;
   color: white;
 }
 
-.loading-text {
+.map-block__loading-text {
   font-size: 40px;
   margin-top: 35%;
 }
@@ -280,7 +280,7 @@ body {
   margin-top: 10px;
 }
 
-.latitude-langitude__wrap {
+.location {
   color: white;
   text-align: end;
   margin-top: 10px;
@@ -295,20 +295,20 @@ body {
     flex-direction: column;
   }
 
-  .button-panel {
+  .header__controls {
     flex-direction: column;
   }
 
-  .content {
+  .main {
     align-items: center;
     justify-content: center;
   }
 
-  .place {
+  .forecast-block__position {
     text-align: center;
   }
 
-  .date-time {
+  .forecast-block__date {
     text-align: center;
     justify-content: center;
     margin-top: 25px;
